--- a/Shop-v1/index.html
+++ b/Shop-v1/index.html
@@ -12,12 +12,14 @@
 		<div class="page-header">Shop-v1</div>
 		
 		<!-- View -->
-		<div ng-controller="StoreController" class="list-group">
-			<div ng-hide="product.notAvailable" ng-repeat="product in products" class="list-group-item">
-				<h3>{{product.name}}</h3>
-				<h3>{{product.price}}</h3>
+		<div ng-controller="StoreController as sc" class="list-group">
+			<div ng-hide="product.notAvailable" 
+			     ng-repeat="product in products | limitTo:10 | orderBy:'-price'" class="list-group-item">
+				<h3>{{product.name | uppercase}}  <small>{{product.make|date:'yyyy'}}</small></h3>
+				<h3>{{product.price|priceDiscount:100|currency:'&#8377':1}}</h3>
 				<p>{{product.description}}</p>
 				<button class="btn btn-primary" ng-show="product">Add to cart</button>
+				<hr/>
 			</div>
 		</div>
 
